# yolo

./: README.md  conftest.py  docker-compose.override.yml  docker-compose.yml  invoke.yml  monkeytype_config.py  pyproject.toml  pytest.ini  scent.py  setup.cfg  tasks.py
docker/: docker-compose.prod.yml  docker-compose.test.yml
docker/caddy/: Caddyfile
docker/django/: Dockerfile  gunicorn.sh
docker/soffice/: install.sh  service.sh
frontend/: Dockerfile
frontend/b2business/: .eslintignore  .eslintrc  gatsby-browser.js  gatsby-config.js  gatsby-node.js  package.json
frontend/b2business/src/config/: codePreview.js
frontend/b2business/src/containers/: gatsbyApp.js  pageListAsync.js
frontend/b2business/src/pages/: 404.tsx
frontend/b2business/src/state/: ReduxWrapper.tsx
frontend/b2business/src/styles/: global.scss
frontend/b2business/src/utils/: checkStore.js  dateUtils.ts  injectReducer.js  injectSaga.js  lists.ts  numbers.ts  reducerInjectors.js  sagaInjectors.js
frontend/wigo-travel/: .dockerignore  .env.example  .eslintignore  .eslintrc  .gitignore  babel.config.js  codegen.yml  gatsby-browser.js  gatsby-config.js  gatsby-node.js  gatsby-ssr.js  gatsby.apollo.config.js  jest.config.js  loadershim.js  package.json  tsconfig.json  tslint.json
frontend/wigo-travel/.storybook/: config.js  main.js  webpack.config.js
frontend/wigo-travel/.storybook/preview/: styles.css
frontend/wigo-travel/src/__generated__/: BrandLogos.d.ts  CommonIcons.d.ts  DefaultLayoutContents.d.ts  EditorialPage.d.ts  ErrorPage.d.ts  Faq.d.ts  HomeQuery.d.ts  LandingPage.d.ts  PrismicSearchWidget.d.ts  ProductBySlug.d.ts  SEO.d.ts  SitePages.d.ts  Sitemap.d.ts  StandardFooter.d.ts  StandardHeader.d.ts  globalTypes.d.ts
frontend/wigo-travel/src/__schemas__/: common_icons.json  company_info_page.json  editorial_page.json  error_category.json  error_page.json  faq_page.json  hero_image.json  home.json  hotel.json  info_block.json  (+11 more)
scraping/: .coveragerc  Dockerfile  README.md  config.py  conftest.py  db.py  jobs.py  main.py  pyproject.toml  pytest.ini  tasks.py
scraping/common/: utils.py
scraping/common/hotel/: hotel_data.py
scraping/selenium_crawlers/common/: driver.py
scraping/selenium_crawlers/common/utils/: list_utils.py  logging_utils.py
scraping/selenium_crawlers/spiders/: __init__.py  base.py
scraping/selenium_crawlers/spiders/alpitour/: alpitour_url_builder.py  combinations_builder.py  crawler.py
scraping/selenium_crawlers/spiders/nicolaus/: api_client.py  builder.py  crawler.py
scraping/selenium_crawlers/spiders/trivago/: crawler.py  find_proxy.py  url_builder.py
scraping/selenium_crawlers/spiders/valtur/: api_client.py  crawler.py
scraping/selenium_crawlers/spiders/veratour/: builder.py  crawler.py
scraping/tests/: test_crawlers.py  test_db.py
server/: conf.py  schema.py  urls.py  wsgi.py
server/apps/authentication/: admin.py  apps.py  exceptions.py  models.py  proxy.py  schema.py  tokens.py
server/apps/b2business/: apps.py
server/apps/b2consumer/: apps.py
server/apps/companies/: admin.py  apps.py  models.py  schema.py
server/apps/main/: admin.py  evaluate.py  model.py  model_preprocessing.py  models.py  resources.py  urls.py  utils.py  views.py  xl_reader.py  xl_writer.py
server/apps/orders/: admin.py  apps.py  exceptions.py  models.py  schema.py  signals.py  tasks.py  views.py
server/apps/products/: admin.py  apps.py  models.py  schema.py  signals.py
server/apps/travels/: admin.py  apps.py  models.py  schema.py  signals.py
server/common/: fn.py  serialization.py
server/settings/: __init__.py
server/settings/components/: __init__.py  caches.py  common.py  huey.py  logging.py
server/settings/environments/: development.py  production.py  testing.py
server/templates/: base.html
server/templates/txt/: humans.txt
server/tests/: client.py  fixtures.py
server/tests/bdd/: __init__.py  conftest.py
server/tests/test_server/: test_urls.py
sql/: create_database.sql  drop_database.sql
(+687 files in other folders)
